--- a/Support.html
+++ b/Support.html
@@ -14,7 +14,7 @@
 </div>
 
   <nav class="nav">
-    <a href="Homepage.html"><strong>Home</strong></a>
+    <a href="index.html"><strong>Home</strong></a>
     <a href="#about"><strong>About</strong></a>
     <a href="#services"><strong>Services</strong></a>
     <a href="support.html" class="btn-support"><strong>Support</strong></a>
