--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </div>
 <h1 class="tagline">Wecare For You</h1>
   <nav class="nav">
-    <a href="Helthcare Pluse"><strong>Home</strong></a>
+    <a href=""><strong>Home</strong></a>
     <a href="#about"><strong>About</strong></a>
     <a href="#services"><strong>Services</strong></a>
     <a href="support.html" class="btn-support"><strong>Support</strong></a>
